# DeepSeek-OCR-macOS

./: .gitignore  CHANGELOG.md  LICENSE  NEXT_STEPS.md  README.md  ocr_easy.sh  package.json  push_to_github.sh  pyproject.toml
internal/: local_parse_solution.md
scripts/: postinstall.js
src/deepseek_ocr_cli/: cli.py  converters.py  core.py  utils.py
傻瓜式操作/: README.md  convert_mmd.py  ocr.sh  使用顺序.txt  路径修复说明.md
傻瓜式操作V2/: ocr_easy.sh
待删除/: CPU模式说明.md  MacOS修复指南.md  README.md  README_OCR_TEST.md  convert_mmd_to_md.py  deploy_deepseek_ocr.sh  fix_cuda.py  fix_mps_support.py  install.sh  install_dependencies.sh  ocr.sh  run_ocr_mps.py  run_ocr_test.py  run_ocr_test.sh  save_test_image.py  test.sh  test_ocr.py  一键运行.sh  交互式使用指南.md  使用指南.md  使用说明.txt  开始使用.md  快速参考.md  快速测试指南.md  文件清单.md  最终测试指南.md  最终版本说明.md  格式转换说明.md  简易测试指南.md  问题诊断.md
待删除/output/: 2025-10-23-175813 - MacOS ARM系统下原生部署指南：DeepSeek-OCR实战详解及使用教程 - 全栈开发.md
